--- a/themes/history/source/sass/c_local/10_layout/_layout.sass
+++ b/themes/history/source/sass/c_local/10_layout/_layout.sass
@@ -433,10 +433,12 @@ body
       margin: auto
       +bp($stack)
         grid-column: auto
+        margin-top: 0
     .footer--text
       p
         margin-top: rv(-1)
         padding: 0 
+        margin-top: 0
         +bp($stack)
           padding: 0 
         +bp($tablet)
@@ -468,6 +470,9 @@ body
       ul
         padding-left: 0
         line-height: font-value(2)
+        margin-top: unset
+        +bp($stack)
+          margin-top: 0
         li
           list-style-type: none
           &:first-child
